Fix reporter form layout issue

--- a/css/bootstrap-lumin.css
+++ b/css/bootstrap-lumin.css
@@ -2103,7 +2103,7 @@ pre code {
     width: 25%;
   }
   .col-lg-2 {
-    width: 16.66666667%;
+    width: 20%;
   }
   .col-lg-1 {
     width: 8.33333333%;
